# github-metadata-backup

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust-fmt-build-test.yml
src/: main.rs  types.rs
