[package]
name = "github-meta-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
octocrab = "0.24"
serde = "1.0.163"
serde_json = "1.0.96"

tokio = { version = "1.28.1", features = ["rt-multi-thread", "time", "sync", "macros"] }
