[package]
name = "github-metadata-backup"
version = "0.1.0"
edition = "2021"
description = "Download issues and pull-requests from the GitHub API and store as JSON files. Supports incremental updates."
readme = "README.md"
authors = ["0xB10C"]
repository = "https://github.com/0xB10C/github-metadata-backup"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
octocrab = "0.47"
serde = "1.0.163"
serde_json = "1.0.96"

tokio = { version = "1.28.1", features = ["rt-multi-thread", "time", "sync", "macros"] }
